src/objects/ServiceResource.object
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>