src/objects/ServiceResource/fields/GDMFSL_External_ID__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>