src/objects/ServiceResource/fields/GDMFSL_Holiday_Processing_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Holiday_Processing_Range_Start__c</fullName>
    <label>Holiday Processing Range Start</label>
    <type>Date</type>
</CustomField>