src/objects/ServiceResource/fields/GDMFSL_IsContractor__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_IsContractor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This tracks whether the Service Resource is a contractor or not</description>
    <label>Is Contractor</label>
    <type>Checkbox</type>
</CustomField>