src/objects/ServiceResource/fields/GDMFSL_Region__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Region__c</fullName>
    <formula>TEXT(RelatedRecord.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>