src/objects/ServiceResource/fields/GDMFSL_Start_of_Shift_24_Hours__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Start_of_Shift_24_Hours__c</fullName>
    <description>This field will evaluate if a Shift was created in the last 24 hours, per DTXFSL-6899</description>
    <formula>NOW() -  GDMFSL_Start_of_Shift__c  &lt;= 1</formula>
    <inlineHelpText>Did the Shift Start in the last 24 hours?</inlineHelpText>
    <label>Start of Shift &lt;24 Hours</label>
    <type>Checkbox</type>
</CustomField>