src/objects/ServiceResource/fields/GDMFSL_Start_of_Shift__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Start_of_Shift__c</fullName>
    <label>Start of Shift</label>
    <type>DateTime</type>
</CustomField>