src/objects/ServiceResource/validationRules/Level1_Not_be_Included_in_Optimization.validationRule-meta.xml
<ValidationRule>
    <fullName>Level1_Not_be_Included_in_Optimization</fullName>
    <active>true</active>
    <description>Cannot Include a Level 1 Resource for Service Optimization</description>
    <errorConditionFormula>AND(GDMFSL_Level_1__c=true, IsOptimizationCapable=true)</errorConditionFormula>
    <errorMessage>Cannot Include a Level 1 Resource for Service Optimization</errorMessage>
</ValidationRule>